Bug 603535 - nsIEventListenerService.getEventTargetChainFor failure on TM nightly, r=mrbkap, a=blocking